; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_43775.c_writeMessageCatalogue.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_43775.c_writeMessageCatalogue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@O_WRONLY = common dso_local global i32 0, align 4
@O_CREAT = common dso_local global i32 0, align 4
@O_TRUNC = common dso_local global i32 0, align 4
@O_NOCTTY = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [47 x i8] c"Failed to open catalogue file %s for writing.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @writeMessageCatalogue(i8* %0, i8** %1, i8** %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i8**, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i8** %1, i8*** %7, align 8
  store i8** %2, i8*** %8, align 8
  store i32 %3, i32* %9, align 4
  %14 = load i8*, i8** %6, align 8
  %15 = load i32, i32* @O_WRONLY, align 4
  %16 = load i32, i32* @O_CREAT, align 4
  %17 = or i32 %15, %16
  %18 = load i32, i32* @O_TRUNC, align 4
  %19 = or i32 %17, %18
  %20 = load i32, i32* @O_NOCTTY, align 4
  %21 = or i32 %19, %20
  %22 = call i32 @open(i8* %14, i32 %21, i32 420)
  store i32 %22, i32* %10, align 4
  %23 = load i32, i32* %10, align 4
  %24 = icmp slt i32 %23, 0
  br i1 %24, label %25, label %29

25:                                               ; preds = %4
  %26 = load i32, i32* @stderr, align 4
  %27 = load i8*, i8** %6, align 8
  %28 = call i32 @fprintf(i32 %26, i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0), i8* %27)
  store i32 -1, i32* %5, align 4
  br label %47

29:                                               ; preds = %4
  %30 = load i8**, i8*** %7, align 8
  %31 = load i8**, i8*** %8, align 8
  %32 = load i32, i32* %9, align 4
  %33 = call i8* @createMessageCatalogueData(i8** %30, i8** %31, i32 %32, i32* %11)
  store i8* %33, i8** %12, align 8
  %34 = load i32, i32* %10, align 4
  %35 = load i8*, i8** %12, align 8
  %36 = load i32, i32* %11, align 4
  %37 = call i32 @write(i32 %34, i8* %35, i32 %36)
  store i32 %37, i32* %13, align 4
  %38 = load i32, i32* %13, align 4
  %39 = load i32, i32* %11, align 4
  %40 = icmp eq i32 %38, %39
  %41 = zext i1 %40 to i32
  %42 = call i32 @assert(i32 %41)
  %43 = load i32, i32* %10, align 4
  %44 = call i32 @close(i32 %43)
  %45 = load i8*, i8** %12, align 8
  %46 = call i32 @free(i8* %45)
  store i32 0, i32* %5, align 4
  br label %47

47:                                               ; preds = %29, %25
  %48 = load i32, i32* %5, align 4
  ret i32 %48
}

declare dso_local i32 @open(i8*, i32, i32) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i8* @createMessageCatalogueData(i8**, i8**, i32, i32*) #1

declare dso_local i32 @write(i32, i8*, i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @close(i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
